Resolved issue with failing builds on Java 9 or higher