@@ -105,7 +105,7 @@ public class UserRepositoryTest {
     public void testCount(){
         final User user = save();
         final Integer count = repository.count();
-        Assert.assertEquals(new Integer(1), count);
+        Assert.assertEquals(Integer.valueOf(1), count);
     }
 
     private User save(){
