@@ -103,7 +103,7 @@ public class RestProjectRepositoryTest {
     public void testCount(){
         final RestProject restProject = save();
         final Integer count = repository.count();
-        Assert.assertEquals(new Integer(1), count);
+        Assert.assertEquals(Integer.valueOf(1), count);
     }
 
     private RestProject save(){
